fix: github dark mode logo

--- a/auth4genai/style.css
+++ b/auth4genai/style.css
@@ -9,9 +9,12 @@ button[data-component-part="tab-button"] {
   background: transparent !important;
 }
 
+/* Make Github integration logo visible in dark mode */
+
 :root {
   --github-logo-filter: none;
 }
-[data-theme="dark"] {
+
+html[style*="color-scheme: dark"] {
   --github-logo-filter: invert(1) brightness(2);
 }
